--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,9 @@ li {
 
 .container {
     display: grid;
+    height: 100vh;
     grid-template-columns: 1fr 3fr;
+    grid-template-rows: 60px 1fr 40px;
 }
 
 header {
@@ -25,6 +27,7 @@ header {
 
 .sidebar {
     grid-column: 1;
+    grid-row: 2;
     border: red solid 2px;
 }
 
