--- a/src/style.css
+++ b/src/style.css
@@ -47,14 +47,16 @@ header {
     border-radius: 4px;
     padding: 8px;
     align-items: center;
+    cursor: pointer;
 }
 
 #content li :nth-child(2) {
-    min-width: 100px;
+    min-width: 130px;
 }
 
 #content li :nth-child(3) {
     flex: 1;
+    text-wrap: wrap;
 }
 
 .task-ctrl-buttons {
